--- a/src/components/app-main/index.marko
+++ b/src/components/app-main/index.marko
@@ -1,14 +1,20 @@
 import testButton from "<app-button>"
 import testBar from "<app-progress-bar>"
-<!-- 
+
 <const/components={
   "test-button": testButton,
   "test-bar": testBar,
-}/> -->
+}/>
 
 <div>
   hello world, below me are dynamic objects
 </div>
 
-<!-- <${components['test-button']}  label="small" size="small" variant="primary"/> -->
+<${components['test-button']}  label="small" size="small" variant="primary"/>
 <app-button  label="small" size="small" variant="primary"/>
+<effect() {  }/>
+<button onClick(){
+    alert('hello world')
+  }>
+  hello world
+</button>
